<resources>
    <string name="app_name">Symphony</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="my_music">My Music</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">540905333099964</string>
    <string name="fb_login_protocol_scheme">fb540905333099964</string>
    <string name="devices_available">Devices Available</string>
    <string name="artist_songs_or_albums">Artist, Songs or Albums</string>
    <string name="new_realeases">New Realeases</string>
    <string name="playlists">Playlists</string>
    <string name="downloaded">Downloaded</string>
    <string name="on_device">On Device</string>
    <string name="radio" />
    <string name="Radio">Radio</string>
    <string name="browse">Browse</string>
    <string name="eletronic_dance">Eletronic/Dance</string>
    <string name="all_moods_and_generes">All Moods and Generes</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="music_languages">Music Languages</string>
    <string name="on_click_behaviour">On Click Behaviour</string>
    <string name="streaming_quality">Streaming Quality</string>
    <string name="equilizer">Equilizer</string>
    <string name="english">English</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="music_streaming_preferences">Music Streaming Preferences</string>
    <string name="offline_music_preferences">Offline Music Preferences</string>
    <string name="download_quality">Download Quality</string>
    <string name="high">High</string>
    <string name="save_data_mode">Save Data Mode</string>
    <string name="offline_songs_on_slow_internet">Offline Songs on Slow Internet</string>
    <string name="profile">Profile</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="my_profile">My Profile</string>
    <string name="help_and_support">Help And Support</string>
    <string name="settings">Settings</string>
    <string name="free_account">Free Account</string>
    <string name="go_premium">Go Premium</string>
    <string name="aakash">Aakash</string>
    <string name="view_profile">View Profile</string>
    <string name="preferences">Preferences</string>
    <string name="offline">Offline</string>
    <string name="playback">Playback</string>
    <string name="crossfade">Crossfade</string>
    <string name="off">Off</string>
    <string name="_12s">12s</string>
    <string name="normalize_volume">Normalize Volume</string>
    <string name="single_line_text_view_twidget">Single-line text view twidget</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="download">Download</string>

</resources>
