<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="8dp"
        android:background="#292C34"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="25dp"

            android:id="@+id/user_name"
            android:textColor="#fff"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:gravity="center_vertical"
        android:text="@string/music_streaming_preferences"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#292C34"

        app:cardCornerRadius="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle"
            android:text="@string/music_languages"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle2"
            android:text="@string/english"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle"

            android:text="@string/on_click_behaviour"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle2"

            android:text="@string/add_to_queue"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle"

            android:text="@string/streaming_quality"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle2"

            android:text="HD"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle"

            android:text="@string/offline_songs_on_slow_internet"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="3dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/AppTheme.MyMusicTextStyle"

            android:text="@string/equilizer"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

    </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:gravity="center_vertical"
        android:text="@string/offline_music_preferences"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#292C34"

        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AppTheme.MyMusicTextStyle"

                    android:text="@string/download_quality"
                   />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/baseline_keyboard_arrow_right_white_18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AppTheme.MyMusicTextStyle"

                    android:text="@string/save_data_mode"
                   />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AppTheme.MyMusicTextStyle"

                    android:text="@string/downloaded"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.06"
                    android:src="@drawable/baseline_keyboard_arrow_right_white_18dp" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:gravity="center_vertical"
        android:text="@string/profile"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#292C34"

        app:cardCornerRadius="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                   style="@style/AppTheme.MyMusicTextStyle"
                    android:text="@string/subscription_details"/>
                    <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                  style="@style/AppTheme.MyMusicTextStyle"  android:textSize="18sp"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_profile"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.06"
                    android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                   style="@style/AppTheme.MyMusicTextStyle"
                    android:text="@string/help_and_support"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.06"
                    android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>
