<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_account"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/free_account"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/premium_account"
        android:layout_marginTop="18dp"
        android:background="@drawable/google_button_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/free_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/go_premium"
        android:textColor="#000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/user_profile"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/premium_account">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aakash"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:id="@+id/user_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:text="@string/view_profile"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"

            android:layout_marginTop="3dp"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_keyboard_arrow_right_white_18dp"/>


    </RelativeLayout>






</android.support.constraint.ConstraintLayout>